# colony-noise-scripts

./: .gitignore  Cargo.toml  README.md  generate-chorus-configs.js  package-lock.json  package.json  zf-shape-2ac.js
.github/workflows/: tests.yml
src/: choice.js  choices.rs  constants.js  decide.rs  experiment.rs  generate-config.js  io.js  lib.rs  main.rs  stimulus.rs
