[package]
name = "decide-config"
version = "0.1.0"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
description = "Generate config files for chorus noise 2 alternative choice experiment"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.0"
serde-value = "0.7.0"
serde_yaml = "0.8.21"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = "2.33"
rand = "0.8.4"
