[package]
name = "decide-config"
version = "0.1.2"
authors = ["Jonah Weissman <jonahrweissman@gmail.com>"]
description = "generate Decide experiment config files for two alternative choice paradigm"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.0"
serde-value = "0.7.0"
serde_yaml = "0.8.21"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = "2.33"
rand = "0.8.4"
strum = {version = "0.22.0", features = ["derive"] }
itertools = "0.10.1"
dynfmt = {version = "0.1.5", features = ["curly"] }
pretty_env_logger = "0.4.0"
log = "0.4.14"
fixed = "1.11.0"
fixed-macro = "1.1.1"
